<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_add">Add</string>
    <string name="action_add_command">Add command</string>
    <string name="action_back">Back</string>
    <string name="action_buy">Buy</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_collapse_expand">Collapse/Expand</string>
    <string name="action_copy">Copy</string>
    <string name="action_delete">Delete</string>
    <string name="action_done">Done</string>
    <string name="action_edit_command">Edit command</string>
    <string name="action_more">More…</string>
    <string name="action_paste">Paste</string>
    <string name="action_rename">Rename</string>
    <string name="action_reset">Reset</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="activity_diagnostic">Toolbox Diagnostics</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Toolbox</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="category_chat">Command</string>
    <string name="category_combat">Combat</string>
    <string name="category_movement">Movement</string>
    <string name="category_render">Render</string>
    <string name="category_shortcuts">Shortcuts</string>
    <string name="category_world">World</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="color_value_alpha">Alpha</string>
    <string name="color_value_blue">Blue</string>
    <string name="color_value_green">Green</string>
    <string name="color_value_hex">Hex code</string>
    <string name="color_value_red">Red</string>
    <string name="command_mode_once">Command</string>
    <string name="command_mode_repeat">Repeat</string>
    <string name="command_mode_teleport">Teleport</string>
    <string name="command_repeat_interval">Repeat interval</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="effect_amplifier">Amplifier</string>
    <string name="enchant_title">Enchant</string>
    <string name="error_empty">This field can not be empty</string>
    <string name="error_gplay_minecraft">"Open Minecraft's Google Play page"</string>
    <string name="error_gplay_toolbox">"Open Toolbox's Google Play page"</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_illegal_char">This field contains illegal characters</string>
    <string name="error_io">Disk error occurred</string>
    <string name="error_mc_missing_desc">"There's no Minecraft on your device!

Toolbox is a modification for Minecraft and won't run without Minecraft. To get started, please obtain a legal copy of Minecraft using Google Play."</string>
    <string name="error_mc_missing_title">Minecraft is missing</string>
    <string name="error_mc_unsupported_32bit_desc">"Unfortunately, we don't yet support the 32-bit version of the currently installed Minecraft version. Please wait until we support the 32-bit release which we hope to get ready within the next few weeks."</string>
    <string name="error_mc_unsupported_32bit_on_64bit_desc">You have a 32-bit version of Minecraft installed. Please redownload it using Google Play.</string>
    <string name="error_mc_unsupported_32bit_on_64bit_title">Unsupported 32-bit Minecraft</string>
    <string name="error_mc_unsupported_32bit_title">Unsupported 32-bit Minecraft</string>
    <string name="error_mc_unsupported_64bit_desc">"Unfortunately, we don't yet support the 64-bit version of the currently installed Minecraft version. Please wait until we support the 64-bit release which we hope to get ready within the next few weeks or install a 32-bit release."</string>
    <string name="error_mc_unsupported_64bit_title">Unsupported 64-bit Minecraft</string>
    <string name="error_mc_unsupported_generic_desc">"Unfortunately, we don't currently support the currently installed version of Minecraft.

If you are in the beta program, you might need to quit it and install a final Minecraft release. Please check for Toolbox updates or downgrade to one of the following versions: %s"</string>
    <string name="error_mc_unsupported_generic_title">Unsupported Minecraft</string>
    <string name="error_mc_unsupported_installer">Install from Google Play</string>
    <string name="error_mc_unsupported_installer_desc">Please install Minecraft from Google Play in order to use this application. If you need to downgrade the version, open Toolbox at least once with the newer version installed and then downgrade.</string>
    <string name="error_mc_unsupported_outdated_desc">You have an outdated Minecraft version installed. You can get a newer one using Google Play. This version of Toolbox supports the following versions: %s</string>
    <string name="error_mc_unsupported_outdated_title">Outdated Minecraft</string>
    <string name="error_name_used">This name is already used</string>
    <string name="error_no_item_in_hand">You must hold an item in hand to use this feature</string>
    <string name="error_not_ingame">This feature can only be used in-game</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="msa_pick_account">Pick account</string>
    <string name="msa_pick_account_add">Add a new account</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="nbt_editor_actor">Mob/Block</string>
    <string name="nbt_editor_add_tag">Add Tag</string>
    <string name="nbt_editor_item">Item</string>
    <string name="nbt_editor_presets">Presets</string>
    <string name="nbt_editor_tag_type">Type</string>
    <string name="nbt_editor_tap_mob_hint">"In this mode you can edit entities and block entities.
To start, touch the object you want to edit."</string>
    <string name="setting_button_alpha">Button Transparency</string>
    <string name="setting_change_gdpr_consent">Change GDPR consent</string>
    <string name="setting_manage_gplay_subscriptions">Manage Google Play subscriptions</string>
    <string name="setting_open_source_licenses">Open source licenses</string>
    <string name="setting_premium_expire_popup">Show a popup just before premium expires</string>
    <string name="text_name">Name</string>
    <string name="translation_credit" />
</resources>