<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:id="@id/color_picker_root"
    android:tag="layout/dialog_color_picker_0"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@id/header"
        android:background="#20000000"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@id/back"
            android:tag="binding_1"
            android:background="@null"
            android:layout_width="52.0dip"
            android:layout_height="52.0dip"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/action_back"
            app:tint="?android:textColorPrimary" />
        <View
            android:layout_width="0.0dip"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />
        <Button
            android:tag="binding_2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/action_done"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12.0dip"
        android:layout_marginTop="8.0dip"
        android:layout_marginRight="12.0dip">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:hint="@string/color_value_hex"
            android:layout_weight="2.0">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@id/value_hex"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:hint="@string/color_value_red"
            android:layout_weight="1.0">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@id/value_r"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:hint="@string/color_value_green"
            android:layout_weight="1.0">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@id/value_g"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:hint="@string/color_value_blue"
            android:layout_weight="1.0">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@id/value_b"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:hint="@string/color_value_alpha"
            android:layout_weight="1.0">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@id/value_a"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="200.0dip"
        android:layout_marginLeft="6.0dip"
        android:layout_marginTop="16.0dip"
        android:layout_marginRight="6.0dip">
        <io.mrarm.mctoolbox.ui.view.ColorPicker
            android:id="@id/picker"
            android:padding="10.0dip"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0" />
        <io.mrarm.mctoolbox.ui.view.ColorHuePicker
            android:id="@id/hue"
            android:padding="10.0dip"
            android:layout_width="42.0dip"
            android:layout_height="fill_parent" />
        <io.mrarm.mctoolbox.ui.view.ColorAlphaPicker
            android:id="@id/alpha"
            android:padding="10.0dip"
            android:layout_width="42.0dip"
            android:layout_height="fill_parent" />
    </LinearLayout>
</LinearLayout>