<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_gravity="center"
    android:orientation="vertical"
    android:id="@id/edit_container"
    android:tag="layout/dialog_enchant_0"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@id/header"
        android:background="#20000000"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@id/back"
            android:tag="binding_1"
            android:background="@null"
            android:layout_width="52.0dip"
            android:layout_height="52.0dip"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/action_back"
            app:tint="?android:textColorPrimary" />
        <TextView
            android:gravity="center_vertical"
            android:id="@id/title"
            android:background="@null"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/enchant_title"
            android:layout_weight="1.0"
            android:paddingStart="16.0dip"
            android:paddingEnd="16.0dip"
            style="@style/TextAppearance.AppCompat.Subhead" />
        <Button
            android:tag="binding_2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/action_done"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@id/items"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" />
</LinearLayout>